--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       crossorigin="anonymous"
     />
     <script src="https://kit.fontawesome.com/d6b1861be4.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    
   </head>
   <body>
     <nav class="navbar navbar-light bg-light navbar-expand-sm">
@@ -43,25 +46,29 @@
             <a href="/login">Sign In / Sign Up</a>
         </div>
     </nav>
-    <article class="container mt-3">
+    <!-- <div class="container alert-container">
         <div class="row d-none d-sm-block">
             <div class="col-12">
                 <div class="alert alert-warning">
-                    <strong>Sale Now On!</strong>We've got a sale on. Get 1 12-month subscription for the price of 6! <a href="">See here for details!</a>
+                    <strong>Sale Now On!</strong> We've got a sale on. Get 1 12-month subscription for the price of 6! <a href="">See here for details!</a>
                 </div>
             </div>
         </div>
+        </div> -->
+        <div class="container-fluid callout-container">
       <!--Callout-->
+      <div class="opaque-overlay">&nbsp;</div>
       <div class="row">
         <div class="col-12">
           <section class="callout jumbotron text-center">
-            <h1>The finest whiskeys delivered to your doorstep.</h1>
+            <h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
+            <hr class="block-divider block-divider--orange">
             <p class="lead">
               Sign up today to start receiving the world's best whiskeys every
               month. <s class="d-none d-sm-inline">£19.99</s>
               <span class="d-inline d-sm-non"><br></span>
               <strong><mark>First one is free!</mark></strong></p>
-            <button class="btn btn-success btn-lg">Sign Up!</button>
+            <button class="btn btn-lg btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Sign Up!</button>
             <p class="text-muted">
               <small
                 >You must be over 18 to sign up to our service. Please, drink
@@ -72,8 +79,9 @@
         </div>
       </div>
       <!--/.callout-->
-      <hr />
+    </div>
       <!--Quotes-->
+      <div class="quotes-container">
       <section class="quotes">
         <div class="row">
           <div class="col-1 my-5">
@@ -115,9 +123,10 @@
         </div>
       </section>
       <!--/.quotes-->
-      <hr />
+    </div>
 
       <!--Features-->
+      <div class="features-container">
       <section class="features">
         <div class="row">
           <div class="col-12 my-5>
@@ -172,10 +181,43 @@
           </div>
         </div>
       </section>
+    </div>
+    </div>
       <section class="monthly-favourites">
         <table class="monthly"></table>
       </section>
-    </article>
+    </div>
+    <div class="modal" tabindex="-1" id="signUpModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Sign Up To Whiskey Drop!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Email">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="password" placeholder="Password">
+                        </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Repeat Password</label>
+                        <input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
+                    </div>
+                        <button type="submit" class="btn btn-success">Submit</button>
+                    </form>
+                </div>
+                
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
